# dashq

./: .gitignore  AGENTS.md  README.md  compare.py  pyproject.toml  quantize_hf.py
.github/workflows/: ci.yml
notebooks/: hf_walkthrough.ipynb  perplexity_comparison.ipynb  walkthrough.ipynb
src/dashq/: __init__.py  dash_q.py  export.py  export_kquant.py  export_native.py
tests/: test_kquant_roundtrip.py  test_native_roundtrip.py
