[project]
name = "dashq"
version = "0.1.0"
description = "DASH-Q: Robust Ultra Low-Bit Post-Training Quantization via Stable Diagonal Curvature Estimate"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Andrij David"}
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "gguf>=0.18.0",
    "huggingface-hub>=1.12.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.1.1",
    "nbformat>=5.10.0",
    "pandas>=2.2.0",
    "autoawq>=0.2.6",
    "gptqmodel>=1.7.0",
    "llama-cpp-python>=0.3.0",
]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
